--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
             <div class="box hm-img">
                 <div class="home-myimg">
-                    <img src="../myimg6.png">
+                    <img src="myimg6.png">
                 </div>
             </div>
         </div>
@@ -104,7 +104,7 @@
         <div class="grid">
             <div class="box">
                 <div class="about-myimg">
-                    <img src="../myimg4.png" width="80%" style="border-radius: 40rem;">
+                    <img src="myimg4.png" width="80%" style="border-radius: 40rem;">
                 </div>
 
             </div>
