--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
 
                     <p class="socials">
-                        <a href="#"><i class='bx bxl-instagram-alt'></i></a>
-                        <a href="#"><i class='bx bxl-linkedin-square'></i></a>
-                        <a href="#"><i class='bx bxl-github'></i></a>
+                        <a href="https://www.instagram.com/om.22kar/"><i class='bx bxl-instagram-alt'></i></a>
+                        <a href="https://www.linkedin.com/in/om-dipak-baviskar"><i class='bx bxl-linkedin-square'></i></a>
+                        <a href="https://github.com/Om22kar/"><i class='bx bxl-github'></i></a>
                     </p>
 
                     <a href="#" class="btn">Download Resume</a>
@@ -224,7 +224,7 @@
         <!-- <span class="grid"> -->
         <span class="project-container">
             <span class="project-box">
-                <img src="wallpaperflare.com_wallpaper (7).jpg" alt="">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
                 <div class="project-layer">
                     <h2>Web Development/design</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
@@ -234,7 +234,7 @@
                 </div>
             </span>
             <span class="project-box">
-                <img src="wallpaperflare.com_wallpaper (7).jpg" alt="">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
                 <div class="project-layer">
                     <h2>Web Development/design</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
@@ -244,7 +244,7 @@
                 </div>
             </span>
             <span class="project-box">
-                <img src="wallpaperflare.com_wallpaper (7).jpg" alt="">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
                 <div class="project-layer">
                     <h2>Web Development/design</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
@@ -258,7 +258,7 @@
                 <span class="grid"> -->
 
             <span class="project-box">
-                <img src="wallpaperflare.com_wallpaper (7).jpg" alt="">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
                 <div class="project-layer">
                     <h2>Web Development/design</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
@@ -268,7 +268,7 @@
                 </div>
             </span>
             <span class="project-box">
-                <img src="wallpaperflare.com_wallpaper (7).jpg" alt="">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
                 <div class="project-layer">
                     <h2>Web Development/design</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
