--- a/index.html
+++ b/index.html
@@ -277,6 +277,16 @@
 
                 </div>
             </span>
+             <span class="project-box">
+                <img src="view-laptop-computer-coffee-cup-notebook-black-table_35674-10129.avif" alt="">
+                <div class="project-layer">
+                    <h2>Web Development/design</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil
+                        consequuntur temporibus tempora accusamus fuga dolorum quas. Dolor ut iusto repellat enim
+                        molestiae.
+
+                </div>
+            </span>
 
         </span>
         <!-- </span> -->
