--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <a href="https://github.com/Om22kar/"><i class='bx bxl-github'></i></a>
                     </p>
 
-                    <a href="#" class="btn">Download Resume</a>
+                    <a href="resume.pdf" class="btn">Download Resume</a>
 
                 </div>
             </div>
